--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   min-height: 100%;
 }
 html * {
-  font-family: Roboto, sans-serif;
+  font-family: Nunito, sans-serif;
 }
 .intro {
   height: calc(100vh - 20px);
