--- a/style.less
+++ b/style.less
@@ -71,7 +71,7 @@ html * {
       margin-bottom: 35px;
       font-style: normal;
       font-weight: normal;
-      font-size: 68px;
+      font-size: 110px;
       line-height: 1.5;
 
       @media @mobile {
@@ -504,7 +504,7 @@ html * {
     }
 
     span {
-      font-weight: 500;
+      font-weight: bold;
     }
 
     &:not(:last-child) {
