--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ html * {
   margin-bottom: 35px;
   font-style: normal;
   font-weight: normal;
-  font-size: 68px;
+  font-size: 110px;
   line-height: 1.5;
 }
 @media only screen and (max-width: 570px) {
@@ -421,7 +421,7 @@ html * {
   margin-bottom: 15px;
 }
 .contacts__section span {
-  font-weight: 500;
+  font-weight: bold;
 }
 .contacts__section:not(:last-child) {
   margin-bottom: 50px;
